test/regress/ext:gc/return_call_ref00.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\60"
    "\00\02\7f\7f\60\01\64\00\01\7f\03\82\80\80\80\00"
    "\01\01\0a\8c\80\80\80\00\01\86\80\80\80\00\00\20"
    "\00\15\00\0b"
  )
  "type mismatch"
)
